--- a/src/ui/content.ui
+++ b/src/ui/content.ui
@@ -29,7 +29,7 @@
             <property name="can_focus">True</property>
             <property name="enable_search">False</property>
             <child internal-child="selection">
-              <object class="GtkTreeSelection" id="treeview-selection1"/>
+              <object class="GtkTreeSelection" id="treeview-selection"/>
             </child>
           </object>
         </child>
@@ -41,22 +41,22 @@
       </packing>
     </child>
     <child>
-      <object class="GtkSpinner" id="searching_spinner">
-        <property name="visible">True</property>
-        <property name="can_focus">False</property>
-      </object>
-      <packing>
-        <property name="left_attach">1</property>
-        <property name="top_attach">2</property>
-      </packing>
-    </child>
-    <child>
       <object class="GtkLabel" id="status_label">
         <property name="visible">True</property>
         <property name="can_focus">False</property>
       </object>
       <packing>
         <property name="left_attach">0</property>
+        <property name="top_attach">2</property>
+      </packing>
+    </child>
+    <child>
+      <object class="GtkSpinner" id="searching_spinner">
+        <property name="visible">True</property>
+        <property name="can_focus">False</property>
+      </object>
+      <packing>
+        <property name="left_attach">1</property>
         <property name="top_attach">2</property>
       </packing>
     </child>
