--- a/src/ui/content.ui
+++ b/src/ui/content.ui
@@ -2,66 +2,57 @@
 <!-- Generated with glade 3.18.3 -->
 <interface>
   <requires lib="gtk+" version="3.12"/>
-  <object class="GtkGrid" id="content_search">
+  <object class="GtkBox" id="content_search">
     <property name="visible">True</property>
     <property name="can_focus">False</property>
+    <property name="orientation">vertical</property>
     <child>
-      <object class="GtkEntry" id="search_box">
+      <object class="GtkSearchEntry" id="searchbox">
         <property name="visible">True</property>
         <property name="can_focus">True</property>
+        <property name="primary_icon_name">edit-find-symbolic</property>
+        <property name="primary_icon_activatable">False</property>
+        <property name="primary_icon_sensitive">False</property>
       </object>
       <packing>
-        <property name="left_attach">0</property>
-        <property name="top_attach">0</property>
-        <property name="width">3</property>
+        <property name="expand">False</property>
+        <property name="fill">True</property>
+        <property name="position">0</property>
       </packing>
     </child>
     <child>
-      <object class="GtkScrolledWindow" id="scroll_win_results">
+      <object class="GtkScrolledWindow" id="scrollwin_results">
         <property name="visible">True</property>
         <property name="can_focus">True</property>
         <property name="shadow_type">in</property>
-        <property name="min_content_width">250</property>
-        <property name="min_content_height">400</property>
+        <property name="min_content_width">300</property>
+        <property name="min_content_height">200</property>
         <child>
-          <object class="GtkTreeView" id="result_tree_view">
+          <object class="GtkTreeView" id="results">
             <property name="visible">True</property>
             <property name="can_focus">True</property>
-            <property name="enable_search">False</property>
             <child internal-child="selection">
-              <object class="GtkTreeSelection" id="treeview-selection"/>
+              <object class="GtkTreeSelection" id="treeview-selection1"/>
             </child>
           </object>
         </child>
       </object>
       <packing>
-        <property name="left_attach">0</property>
-        <property name="top_attach">1</property>
-        <property name="width">3</property>
+        <property name="expand">False</property>
+        <property name="fill">True</property>
+        <property name="position">1</property>
       </packing>
     </child>
     <child>
-      <object class="GtkLabel" id="status_label">
+      <object class="GtkSpinner" id="loader">
         <property name="visible">True</property>
         <property name="can_focus">False</property>
       </object>
       <packing>
-        <property name="left_attach">0</property>
-        <property name="top_attach">2</property>
+        <property name="expand">False</property>
+        <property name="fill">True</property>
+        <property name="position">2</property>
       </packing>
-    </child>
-    <child>
-      <object class="GtkSpinner" id="searching_spinner">
-        <property name="visible">True</property>
-        <property name="can_focus">False</property>
-      </object>
-      <packing>
-        <property name="left_attach">1</property>
-        <property name="top_attach">2</property>
-      </packing>
-    </child>
-    <child>
-      <placeholder/>
     </child>
   </object>
 </interface>
