--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body {
 	top: 0px;
 	left: 0;
 	width: 100%;
-	height: 50%;
+	height: 20%;
 	background-color: #FF5722; /* Primary Color (Material Design) */ 
 
 }
@@ -20,6 +20,6 @@ body {
 /* Search Button */
 #search {
 
-	margin-left: 5%;
+	margin-right: 5%;
 
 }
