--- a/style.css
+++ b/style.css
@@ -11,8 +11,8 @@ body {
 	position: fixed;
 	top: 0px;
 	left: 0;
-	width: 100%;
-	height: 20%;
+	width: 100vw;
+	height: 20vh;
 	background-color: #FF5722; /* Primary Color (Material Design) */ 
 
 }
@@ -20,11 +20,10 @@ body {
 /* Search Button */
 #search {
 
-	width: 12%;
-	height: 3%;
-	border-radius: 10px;
+	width: 12vw;
+	height: 3vh;
 	background-color: #607D8B; /* Ascent Color (Material Design) */
 	color: #212121; /* Primary Text Color (Material Design) */
-	margin-left: 17%;
+	margin-left: 17vw;
 
 }
