Improved Shadows *Improved Shadows *Improved position of Search-Button

--- a/style.css
+++ b/style.css
@@ -14,19 +14,19 @@ body {
 	width: 100vw;
 	height: 20vh;
 	background-color: #FF5722; /* Primary Color (Material Design) */
-	box-shadow: 0px 8px 8px black;  
+	box-shadow: 0px 4px 4px black;  
 
 }
 
 /* Search Button */
 #search {
 	
-	margin-top: 47vh;
+	margin-top: 47%;
 	width: 12vw;
 	height: 3vh;
 	background-color: #607D8B; /* Ascent Color (Material Design) */
 	color: #212121; /* Primary Text Color (Material Design) */
 	margin-left: 83vw;
-	box-shadow: 0px 4px 4px black, 2px -2px 2px black, -2px 0px 2px black; /* Material Design Shadow */ 
+	box-shadow: 0px 2px 2px black, 1px -1px 1px black, -1px 0px 1px black; /* Material Design Shadow */ 
 
 }
