--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body {
 	position: fixed;
 	top: 0px;
 	left: 0;
-	width: 100vw;
+	width: 100%;
 	height: 20vh;
 	background-color: #FF5722; /* Primary Color (Material Design) */
 	box-shadow: 0px 4px 4px black;  
