--- a/style.css
+++ b/style.css
@@ -1,32 +1,30 @@
 body {
-
 	margin: 100%;
-	padding: 100%;
-
+        padding: 100%;
 }
 
 /* Header */
 #header {
-
-	position: fixed;
-	top: 0px;
-	left: 0;
-	width: 100%;
-	height: 20vh;
-	background-color: #FF5722; /* Primary Color (Material Design) */
-	box-shadow: 0px 4px 4px black;  
-
+        position: fixed;
+        top: 0px;
+        left: 0;
+        width: 100%;
+        height: 20vh;
+        background-color: #FF5722; /* Primary Color (Material Design) */
+        box-shadow: 0px 4px 4px black;
+}
+                                                                                                                                                  
+/* Search Button */ #search {
+        margin-top: 8.5vh;
+        border: none;
+        width: 12vw;
+        height: 3vh;
+        background-color: #607D8B; /* Ascent Color (Material Design) */
+        color: #212121; /* Primary Text Color (Material Design) */
+        margin-left: 90%;
+        box-shadow: 0px 2px 2px black, 1px -1px 1px black, -1px 0px 1px black; /* Material Design Shadow */
 }
 
-/* Search Button */
-#search {
-	
-	margin-top: 47%;
-	width: 12vw;
-	height: 3vh;
-	background-color: #607D8B; /* Ascent Color (Material Design) */
-	color: #212121; /* Primary Text Color (Material Design) */
-	margin-left: 83vw;
-	box-shadow: 0px 2px 2px black, 1px -1px 1px black, -1px 0px 1px black; /* Material Design Shadow */ 
-
+#search:hover, #search:focus {
+	outline: 0;
 }
