--- a/style.css
+++ b/style.css
@@ -14,7 +14,8 @@ body {
         box-shadow: 0px 4px 4px black;
 }
                                                                                                                                                   
-/* Search Button */ #search {
+/* Search Button */
+#search {
         margin-top: 8.5vh;
         border: none;
         width: 12vw;
@@ -27,4 +28,18 @@ body {
 
 #search:hover, #search:focus {
 	outline: 0;
+}
+
+#menu_button {
+
+	color: #607D8B;
+
+}
+
+#menu {
+
+	height: 100vh;
+	width: 15vw;
+	border: 1px solid black;
+
 }
