--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body {
         position: fixed;
         top: 0px;
         left: 0;
-        width: 100%;
+        width: 100vw;
         height: 20vh;
         background-color: #FF5722; /* Primary Color (Material Design) */
         box-shadow: 0px 4px 4px black;
@@ -16,6 +16,9 @@ body {
                                                                                                                                                   
 /* Search Button */
 #search {
+	text-decoration: none;
+	font-weight: bold;
+	text-align: center;
         margin-top: 8.5vh;
         border: none;
         width: 12vw;
@@ -38,7 +41,9 @@ body {
 
 #menu {
 
-	height: 100vh;
+	position: fixed;
+	top: 20vh;
+	height: 80vh;
 	width: 15vw;
 	border: 1px solid black;
 
