--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@ body {
                                                                                                                                                   
 /* Search Button */
 #search {
+	cursor: pointer;
 	text-decoration: none;
 	font-weight: bold;
 	text-align: center;
@@ -49,21 +50,5 @@ body {
 	height: 80vh;
 	width: 15vw;
 	border: 1px solid black;
-
-}
-
-a.search_link {
-
-	display: block;
-	height: 100%;
-   	width: 100%;
-    	text-decoration: none;
-
-}
-
-#search_text {
-
-	width: 100%;
-	height: 100%;
 
 }
