--- a/style.css
+++ b/style.css
@@ -22,13 +22,13 @@ body {
 	text-decoration: none;
 	font-weight: bold;
 	text-align: center;
-        margin-top: 8.5vh;
+       	top: 8.5vh;
         border: none;
         width: 12vw;
         height: 3vh;
         background-color: #607D8B; /* Ascent Color (Material Design) */
         color: #212121; /* Primary Text Color (Material Design) */
-        margin-left: 90%;
+        margin-left: 83%;
         box-shadow: 0px 2px 2px black, 1px -1px 1px black, -1px 0px 1px black; /* Material Design Shadow */
 }
 
