Search-Button improved

--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ body {
 	text-decoration: none;
 	font-weight: bold;
 	text-align: center;
-       	top: 8.5vh;
+       	margin-top: 5vh;
         border: none;
         width: 12vw;
         height: 3vh;
