font size resetted

--- a/style.css
+++ b/style.css
@@ -18,7 +18,6 @@ body {
                                                                                                                                                   
 /* Search Button */
 #search {
-	font-size: 100vw;
 	cursor: pointer;
 	text-decoration: none;
 	font-weight: bold;
@@ -40,7 +39,7 @@ body {
 #menu_button {
 
 	color: #607D8B;
-	font-size: 1000vw;
+	font-size: 1000%;
 
 }
 
