--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@ body {
         padding: 0%;
 	width: 100%;
 	height: 100%;
+	overflow: hidden;
 }
 
 /* Header */
@@ -13,7 +14,7 @@ body {
         width: 100%;
         height: 20%;
         background-color: #FF5722; /* Primary Color (Material Design) */
-        box-shadow: 0px 4px 4px black;
+        box-shadow: 0px 4px 4px #B6B6B6;
 }
                                                                                                                                                   
 /* Search Button */
@@ -26,7 +27,7 @@ body {
 	background-color: #607D8B; /* Ascent Color (Material Design) */	
 	text-align: center;
 	color: #212121; /* Primary Text Color (Material Design) */
-        box-shadow: 0px 2px 2px black, 1px -1px 1px black, -1px 0px 1px black; /* Material Design Shadow */
+        box-shadow: 0px 2px 2px #B6B6B6, 1px -1px 1px #B6B6B6, -1px 0px 1px #B6B6B6; /* Material Design Shadow */
 	left: 85%;
 	top: 8%;
 }
@@ -50,4 +51,29 @@ body {
 	width: 15%;
 	border: 1px solid black;
 
+}
+
+#apps {
+	position: absolute;
+	top: 22%;
+	left: 18%;
+	width: 82%;
+	height: 78%;
+	text-align: center;
+	vertical-align: middle;
+}
+#apps li {
+	width: 20.5%;
+	border: 1px solid #607D8B;
+	background-color: #FFFFFF;
+	height: 26%;
+	float: left;
+	list-style-type: none;
+	color: #212121;
+	text-align: center;
+	vertical-align: middle;
+	display: inline;
+	font-weight: bold;
+	box-shadow: 0px 4px 4px #B6B6B6, 2px -2px 2px #B6B6B6, -2px 0px 2px #B6B6B6;
+	line-height: 21vh;
 }
