--- a/src/ui/content.ui
+++ b/src/ui/content.ui
@@ -43,8 +43,8 @@
           <object class="GtkLabel" id="name_label">
             <property name="visible">True</property>
             <property name="can_focus">False</property>
-            <property name="xalign">1</property>
             <property name="label" translatable="yes">Name:</property>
+            <property name="xalign">1</property>
           </object>
           <packing>
             <property name="expand">False</property>
@@ -56,8 +56,8 @@
           <object class="GtkLabel" id="pkgname">
             <property name="visible">True</property>
             <property name="can_focus">False</property>
-            <property name="xalign">0.80000001192092896</property>
             <property name="label" translatable="yes">pkgname</property>
+            <property name="xalign">0.80000001192092896</property>
           </object>
           <packing>
             <property name="expand">False</property>
@@ -81,8 +81,8 @@
           <object class="GtkLabel" id="pkger_label">
             <property name="visible">True</property>
             <property name="can_focus">False</property>
-            <property name="xalign">1</property>
             <property name="label" translatable="yes">Packager:</property>
+            <property name="xalign">1</property>
           </object>
           <packing>
             <property name="expand">False</property>
@@ -94,8 +94,8 @@
           <object class="GtkLabel" id="pkgpackager">
             <property name="visible">True</property>
             <property name="can_focus">False</property>
-            <property name="xalign">0.80000001192092896</property>
             <property name="label" translatable="yes">packager</property>
+            <property name="xalign">0.80000001192092896</property>
           </object>
           <packing>
             <property name="expand">False</property>
@@ -119,9 +119,9 @@
           <object class="GtkLabel" id="desc_label">
             <property name="visible">True</property>
             <property name="can_focus">False</property>
+            <property name="label" translatable="yes">Description:</property>
             <property name="xalign">1</property>
             <property name="yalign">0</property>
-            <property name="label" translatable="yes">Description:</property>
           </object>
           <packing>
             <property name="expand">False</property>
@@ -133,10 +133,10 @@
           <object class="GtkLabel" id="pkgdesc">
             <property name="visible">True</property>
             <property name="can_focus">False</property>
-            <property name="xalign">0.80000001192092896</property>
             <property name="label" translatable="yes">Package Descriptionwill be placed here.</property>
             <property name="wrap">True</property>
             <property name="angle">0.02</property>
+            <property name="xalign">0.80000001192092896</property>
           </object>
           <packing>
             <property name="expand">False</property>
@@ -171,8 +171,8 @@
           <object class="GtkLabel" id="version_label">
             <property name="visible">True</property>
             <property name="can_focus">False</property>
-            <property name="xalign">1</property>
             <property name="label" translatable="yes">Version:</property>
+            <property name="xalign">1</property>
           </object>
           <packing>
             <property name="expand">False</property>
@@ -184,8 +184,8 @@
           <object class="GtkLabel" id="pkgver">
             <property name="visible">True</property>
             <property name="can_focus">False</property>
-            <property name="xalign">0.80000001192092896</property>
             <property name="label" translatable="yes">pkgver</property>
+            <property name="xalign">0.80000001192092896</property>
           </object>
           <packing>
             <property name="expand">False</property>
@@ -209,8 +209,8 @@
           <object class="GtkLabel" id="size_label">
             <property name="visible">True</property>
             <property name="can_focus">False</property>
-            <property name="xalign">1</property>
             <property name="label" translatable="yes">Size (Installed):</property>
+            <property name="xalign">1</property>
           </object>
           <packing>
             <property name="expand">False</property>
@@ -222,8 +222,8 @@
           <object class="GtkLabel" id="pkgsize">
             <property name="visible">True</property>
             <property name="can_focus">False</property>
-            <property name="xalign">0.80000001192092896</property>
             <property name="label" translatable="yes">pkgsize kb</property>
+            <property name="xalign">0.80000001192092896</property>
           </object>
           <packing>
             <property name="expand">False</property>
@@ -340,6 +340,58 @@
         <property name="fill">True</property>
         <property name="position">2</property>
       </packing>
+    </child>
+  </object>
+  <object class="GtkDialog" id="install_window">
+    <property name="can_focus">False</property>
+    <property name="type_hint">dialog</property>
+    <child internal-child="vbox">
+      <object class="GtkBox" id="dialog-vbox1">
+        <property name="can_focus">False</property>
+        <property name="orientation">vertical</property>
+        <property name="spacing">2</property>
+        <child internal-child="action_area">
+          <object class="GtkButtonBox" id="dialog-action_area1">
+            <property name="can_focus">False</property>
+            <property name="layout_style">end</property>
+            <child>
+              <object class="GtkButton" id="install_done_button">
+                <property name="label">gtk-ok</property>
+                <property name="visible">True</property>
+                <property name="sensitive">False</property>
+                <property name="can_focus">True</property>
+                <property name="receives_default">True</property>
+                <property name="use_stock">True</property>
+              </object>
+              <packing>
+                <property name="expand">True</property>
+                <property name="fill">True</property>
+                <property name="position">0</property>
+              </packing>
+            </child>
+          </object>
+          <packing>
+            <property name="expand">False</property>
+            <property name="fill">False</property>
+            <property name="position">0</property>
+          </packing>
+        </child>
+        <child>
+          <object class="GtkBox" id="content_box">
+            <property name="visible">True</property>
+            <property name="can_focus">False</property>
+            <property name="orientation">vertical</property>
+            <child>
+              <placeholder/>
+            </child>
+          </object>
+          <packing>
+            <property name="expand">False</property>
+            <property name="fill">True</property>
+            <property name="position">1</property>
+          </packing>
+        </child>
+      </object>
     </child>
   </object>
 </interface>
