--- a/style.css
+++ b/style.css
@@ -40,7 +40,7 @@ body {
 
   	position: absolute;
 	color: #FFFFFF;
-	font-size: 600%;
+	font-size: 4vw;
   	height: 15%;
   	width: auto;
   	top: 0px;
