--- a/style.css
+++ b/style.css
@@ -80,3 +80,9 @@ body {
 	box-shadow: 0px 4px 4px #B6B6B6, 2px -2px 2px #B6B6B6, -2px 0px 2px #B6B6B6;
 	line-height: 21vh;
 }
+
+#apps li:nth-child(2) {
+
+        background-color: red;
+
+}
