--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@ body {
 	width: 100%;
 	height: 100%;
 	overflow: hidden;
+        background-color: #222;
 }
 
 /* Header */
@@ -13,7 +14,7 @@ body {
         left: 0;
         width: 100%;
         height: 20%;
-        background-color: #FF5722; /* Primary Color (Material Design) */
+        background-color: #CC6600; /* Primary Color (Material Design) */
         box-shadow: 0px 4px 4px #B6B6B6;
 }
                                                                                                                                                   
