--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ body {
         width: 100%;
         height: 20%;
         background-color: #CC6600; /* Primary Color (Material Design) */
-        box-shadow: 0px 4px 4px #B6B6B6;
+        box-shadow: 0px 4px 4px #111;
 }
                                                                                                                                                   
 /* Search Button */
@@ -28,7 +28,7 @@ body {
 	background-color: #607D8B; /* Ascent Color (Material Design) */	
 	text-align: center;
 	color: #212121; /* Primary Text Color (Material Design) */
-        box-shadow: 0px 2px 2px #B6B6B6, 1px -1px 1px #B6B6B6, -1px 0px 1px #B6B6B6; /* Material Design Shadow */
+        box-shadow: 0px 2px 2px #111, 1px -1px 1px #111, -1px 0px 1px #111; /* Material Design Shadow */
 	left: 85%;
 	top: 8%;
 }
@@ -78,7 +78,7 @@ body {
 	vertical-align: middle;
 	display: inline;
 	font-weight: bold;
-	box-shadow: 0px 4px 4px #B6B6B6, 2px -2px 2px #B6B6B6, -2px 0px 2px #B6B6B6;
+	box-shadow: 0px 4px 4px #111, 2px -2px 2px #111, -2px 0px 2px #111;
 	line-height: 21vh;
 }
 
